Show images correctly on mobile
https://twitter.com/omo2009/status/948191946844991488

--- a/en/themes/x17/static/main.css
+++ b/en/themes/x17/static/main.css
@@ -233,6 +233,13 @@ article {
     }
 }
 
+.fig {
+    & img {
+        max-width: 100%;
+        height: auto;
+    }
+}
+
 div.photo {
     margin-top: 1em;
 }
@@ -337,6 +344,12 @@ footer {
 
         & hr {
             display: none;
+        }
+    }
+
+    .fig {
+        & img {
+            max-width: none;
         }
     }
 }
